Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>03.2 CSS Multiple Values Concert Poster</title>
+        <title>Concert</title>
     </head>
     <body>
         <h1>BLACKPINK</h1>
