Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html><head>
-        <title>03.2 CSS Multiple Values Concert Poster</title>
+        <title>Concert</title>
     <style>img{
     width:600px;
 }
