Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ h1{
 h2{
     color:red;
 }
+p{
+    color:pink;
+}
 img{
     border:dashed;
 }
@@ -16,7 +19,7 @@ p{
     text-align:center;
 }
 body{
-    background-color:yellow;
+    background-image: url("https://img.88tph.com/production/20180510/12522298-1.jpg!/watermark/url/L3BhdGgvbG9nby5wbmc/align/center");
 }</style></head>
     <body>
         <h1>BLACKPINK</h1>
